--- a/resources/lang/pl.json
+++ b/resources/lang/pl.json
@@ -15,5 +15,6 @@
     "A new verification link has been sent to the email address you provided during registration.": "Nowy link resetujący zostały wysłany na podany przez Ciebie email.",
     "Resend Verification Email": "Wyślij Link Ponownie",
     "Log Out": "Wyloguj się",
+    "You're logged in!": "Jesteś zalogowana/y!",
     "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn\\'t receive the email, we will gladly send you another.": "Dziękujemy za rejestrację. Zanim zaczniemy, czy mógłbyś zweryfikować swój adres email klikając na link, który wysłaliśmy Ci na podany adres email? Jeśli takiego linku nie otrzymałeś możemy wysłać go ponownie."
 }
